--- a/InterProcessCommunication/InterProcessCommunication/InterProcessCommunication.vcxproj.filters
+++ b/InterProcessCommunication/InterProcessCommunication/InterProcessCommunication.vcxproj.filters
@@ -24,7 +24,7 @@
     <ClInclude Include="AnonymousPipe.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="NamedPipe.h">
+    <ClInclude Include="NamedPipeClient.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="Socket.h">
@@ -34,6 +34,12 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="SharedMemory.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="NamedPipeServer.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="NamedPipe.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
@@ -47,7 +53,7 @@
     <ClCompile Include="AnonymousPipe.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="NamedPipe.cpp">
+    <ClCompile Include="NamedPipeClient.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Socket.cpp">
@@ -62,5 +68,14 @@
     <ClCompile Include="main.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="NamedPipeServer.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="NamedPipe.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="cpp.hint" />
   </ItemGroup>
 </Project>
